<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootMainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="boymustafa.com.myapplication.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/et_name"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="0189826490"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/et_hp"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


        <Button
            android:id="@+id/editPhoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

    </LinearLayout>

    <Button
        android:id="@+id/userTypeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_type"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>





</LinearLayout>
